# IronCrab

./: .env  Cargo.toml  README.md
src/: main.rs
src/models/: difficulty.rs  equipment.rs  exercise.rs  mod.rs  muscle_group.rs  plan.rs  workout.rs
src/scraper/: api_ninjas.rs  api_source.rs  mod.rs
